--- a/productos.html
+++ b/productos.html
@@ -263,23 +263,13 @@
         <!-- Barra de navegación móvil -->
         <div class="mobile-nav-products d-lg-none">
           <div class="mobile-nav-scroll">
-            <button class="mobile-nav-item" data-category="big-bags">
+            <button class="mobile-nav-item" data-category="big-bags" data-product-id="big-bags-general">
               Big Bags
-              <i class="bi bi-chevron-down"></i>
             </button>
             <button class="mobile-nav-item" data-category="bulk-liner" data-product-id="bulk-liner">Bulk Liner</button>
             <button class="mobile-nav-item" data-category="bolsas" data-product-id="bolsas">Bolsas</button>
             <button class="mobile-nav-item" data-category="cubre-cerco" data-product-id="cubre-cerco">Cubre Cerco</button>
             <button class="mobile-nav-item" data-category="disenos" data-product-id="disenos-personalizados">Diseños</button>
-          </div>
-          <!-- Subproductos de Big Bags -->
-          <div class="mobile-nav-scroll sub-items" style="display: none;">
-            <button class="mobile-nav-item" data-product-id="boca-abierta-fondo-cerrado">Boca Abierta/Fondo Cerrado</button>
-            <button class="mobile-nav-item" data-product-id="boca-abierta-valvula">Boca Abierta/Válvula</button>
-            <button class="mobile-nav-item" data-product-id="valvula-carga-fondo-cerrado">Válvula Carga/Fondo Cerrado</button>
-            <button class="mobile-nav-item" data-product-id="boca-pollera-fondo-cerrado">Boca Pollera/Fondo Cerrado</button>
-            <button class="mobile-nav-item" data-product-id="boca-pollera-valvula">Boca Pollera/Válvula</button>
-            <button class="mobile-nav-item" data-product-id="valvula-carga-descarga">Válvula Carga/Descarga</button>
           </div>
         </div>
         <div class="row">
