--- a/diseño.html
+++ b/diseño.html
@@ -190,20 +190,11 @@
           <li class="dropdown">
             <a href="productos.html"><span>Productos</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
+              <li><a href="big-bags.html">Big Bags</a></li>
+              <li><a href="etiquetas.html">Etiquetas</a></li>
               <li><a href="productos.html#bolsas">Bolsas y Embalaje</a></li>
               <li><a href="productos.html#bulk-liner">Bulk Liner</a></li>
               <li><a href="productos.html#cubre-cerco">Cubre Cerco</a></li>
-              <li class="dropdown">
-                <a href="productos.html#big-bags"><span>Big Bags</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="productos.html#product-boca-abierta-fondo-cerrado">Boca abierta / Fondo cerrado</a></li>
-                  <li><a href="productos.html#product-boca-abierta-valvula">Boca abierta / Válvula de descarga</a></li>
-                  <li><a href="productos.html#product-valvula-carga-fondo-cerrado">Válvula de carga / Fondo cerrado</a></li>
-                  <li><a href="productos.html#product-boca-pollera-fondo-cerrado">Boca con pollera / Fondo cerrado</a></li>
-                  <li><a href="productos.html#product-boca-pollera-valvula">Boca con pollera / Válvula de descarga</a></li>
-                  <li><a href="productos.html#product-valvula-carga-descarga">Válvula de carga / Válvula de descarga</a></li>
-                </ul>
-              </li>
             </ul>
           </li>
           <li><a href="diseño.html">Diseño</a></li>
