--- a/big-bags.html
+++ b/big-bags.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Big Bags - MaleMax</title>
-    <meta name="description" content="Expertos en fabricación de Big Bags y soluciones de embalaje industrial. Ofrecemos productos de alta calidad, resistentes y personalizables para la industria y el agro">
-    <meta name="keywords" content="big bags, bolsas de polipropileno, embalaje industrial, bulk liner, bolsones industriales, cubre cercos, bolsas de rafia, contenedores flexibles, FIBC, maxisacos, bolsas para almacernar, almacenamiento     ">
-  
+    <meta name="description" content="Venta y fabricación de Big Bags a medida. Soluciones en bolsones industriales, maxisacos y contenedores flexibles para agro, industria y logística. Calidad, resistencia y asesoramiento personalizado.">
+    <meta name="keywords" content="big bags, bolsones industriales, maxisacos, contenedores flexibles, FIBC, bolsas de polipropileno, big bag a medida, embalaje industrial, almacenamiento, agro, industria, logística, bolsas para granel, bolsas resistentes, soluciones de embalaje">  
     <!-- Favicons -->
     <link href="assets/img/favicon2.png" rel="icon">
     <link href="assets/img/lRecurso 3.png" rel="apple-touch-icon">
@@ -62,6 +61,22 @@
       </nav>
     </div>
   </header>
+
+  <div class="promo-banner">
+    <div class="container">
+      <div class="promo-content">
+        <i class="bi bi-lightning-charge"></i>
+        <span class="promo-text">¡Oferta especial! Descuento del 15% en pedidos superiores a 100 unidades</span>
+        <small class="promo-validity">Válido hasta fin de mes</small>
+        <button class="btn-promo" data-bs-toggle="modal" data-bs-target="#serviciosModal">
+          ¡Cotizar Ahora!
+        </button>
+        <button class="promo-close" aria-label="Cerrar banner">
+          <i class="bi bi-x"></i>
+        </button>
+      </div>
+    </div>
+  </div>
 
   <main class="main">
     <div class="page-title dark-background">
