--- a/etiquetas.html
+++ b/etiquetas.html
@@ -65,6 +65,24 @@
     </div>
   </header>
 
+  
+
+  <div class="promo-banner">
+    <div class="container">
+      <div class="promo-content">
+        <i class="bi bi-lightning-charge"></i>
+        <span class="promo-text">¡Oferta especial! Descuento del 15% en pedidos superiores a 100 unidades</span>
+        <small class="promo-validity">Válido hasta fin de mes</small>
+        <button class="btn-promo" data-bs-toggle="modal" data-bs-target="#serviciosModal">
+          ¡Cotizar Ahora!
+        </button>
+        <button class="promo-close" aria-label="Cerrar banner">
+          <i class="bi bi-x"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+
   <!-- Banner del Producto -->
   <div class="page-title dark-background">
     <div class="container position-relative">
