--- a/productos.html
+++ b/productos.html
@@ -252,15 +252,12 @@
           <p class="section-subtitle">Descubrí nuestra gama completa de productos diseñados para optimizar tus operaciones</p>
         </div>
         <!-- Barra de navegación móvil -->
-        <div class="mobile-nav-products d-lg-none">
-          <div class="mobile-nav-scroll">
-            <button class="mobile-nav-item" data-category="big-bags" data-product-id="big-bags-general">
-              Big Bags
-            </button>
+        <div class="mobile-nav-products align-items-center">
+          <div class="mobile-nav-scroll align-items-center">
+
             <button class="mobile-nav-item" data-category="bulk-liner" data-product-id="bulk-liner">Bulk Liner</button>
             <button class="mobile-nav-item" data-category="bolsas" data-product-id="bolsas">Bolsas</button>
             <button class="mobile-nav-item" data-category="cubre-cerco" data-product-id="cubre-cerco">Cubre Cerco</button>
-            <button class="mobile-nav-item" data-category="etiquetas" data-product-id="etiquetas">Etiquetas</button>
             <button class="mobile-nav-item" data-category="disenos" data-product-id="disenos-personalizados">Diseños</button>
           </div>
         </div>
