--- a/big-bags.html
+++ b/big-bags.html
@@ -25,6 +25,8 @@
     <!-- Main CSS Files -->
     <link href="assets/css/main.css" rel="stylesheet">
     <link href="assets/css/big-bags.css" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) --> <script async src=" https://www.googletagmanager.com/gtag/js?id=AW-17200535881 "></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17200535881'); </script>
   </head>
 
 <body class="big-bags-page">
@@ -816,6 +818,7 @@
   <script src="assets/js/assistant.js"></script>
   <script src="assets/js/banner.js"></script>
   <script src="assets/js/formulario.js"></script>
+  <script src="assets/js/whatsapp-tracking.js"></script>
 
 
 
