--- a/etiquetas.html
+++ b/etiquetas.html
@@ -27,6 +27,8 @@
   <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/productos.css" rel="stylesheet">
   <link href="assets/css/etiquetas.css" rel="stylesheet">
+  
+  <!-- Google tag (gtag.js) --> <script async src=" https://www.googletagmanager.com/gtag/js?id=AW-17200535881 "></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17200535881'); </script>
 </head>
 
 <body class="etiquetas-page">
@@ -708,6 +710,7 @@
   <script src="assets/js/etiquetas.js"></script>
   <script src="assets/js/assistant.js"></script>
   <script src="assets/js/banner.js"></script>
+  <script src="assets/js/whatsapp-tracking.js"></script>
 
 
       <!-- Tabs Modal -->
