--- a/productos.html
+++ b/productos.html
@@ -26,6 +26,8 @@
   <!-- Template Main CSS Files -->
   <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/productos.css" rel="stylesheet">
+
+  <!-- Google tag (gtag.js) --> <script async src=" https://www.googletagmanager.com/gtag/js?id=AW-17200535881 "></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17200535881'); </script>
 </head>
 
 <body class="productos-page">
@@ -150,6 +152,12 @@
                             <option>Bolsa de Rafia</option>
                             <option>Tela Cubre Cerco</option>
                             <option>Bulk Liner</option>
+                          </optgroup>
+                          <optgroup label="Etiquetas">
+                            <option>Etiquetas Comunes</option>
+                            <option>Etiquetas Térmicas</option>
+                            <option>Etiquetas Textiles</option>
+                            <option>Etiquetas para Congelados</option>
                           </optgroup>
                         </select>
                         <label>Producto a cotizar</label>
@@ -572,6 +580,7 @@
   <script src="assets/js/productos.js"></script>
   <script src="assets/js/assistant.js"></script>
   <script src="assets/js/banner.js"></script>
+  <script src="assets/js/whatsapp-tracking.js"></script>
 
 </body>
 </html>
