--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- Google tag (gtag.js) --> <script async src=" https://www.googletagmanager.com/gtag/js?id=AW-17200535881 "></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17200535881'); </script>
 
 </head>
 
@@ -1218,6 +1219,7 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/formulario.js"></script>
+  <script src="assets/js/whatsapp-tracking.js"></script>
   <script src="assets/js/assistant.js"></script>
 
 
