--- a/nosotros.html
+++ b/nosotros.html
@@ -25,6 +25,8 @@
 
   <!-- Template Main CSS Files -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- Google tag (gtag.js) --> <script async src=" https://www.googletagmanager.com/gtag/js?id=AW-17200535881 "></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17200535881'); </script>
 </head>
 
 <body class="productos-page">
@@ -549,8 +551,10 @@
   
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/productos.js"></script>
+  <script src="assets/js/nosotros.js"></script>
   <script src="assets/js/assistant.js"></script>
+  <script src="assets/js/banner.js"></script>
+  <script src="assets/js/whatsapp-tracking.js"></script>
 
 </body>
 </html>
